--- a/.env
+++ b/.env
@@ -1,12 +1,25 @@
+# Environment
 NODE_ENV=development
 PORT=3000
-SESSION_SECRET=your-secret-key-here
-DATA_DIR=./data
-LOG_DIR=./logs
 
-# Bot Settings
-BOT_NAME=WhatsApp Bot
-BOT_DESCRIPTION=A WhatsApp bot for managing multiple numbers
-DEFAULT_RESPONSE_DELAY_MIN=1000
-DEFAULT_RESPONSE_DELAY_MAX=3000
-DEFAULT_INACTIVITY_TIMEOUT=3600
+# Authentication
+SESSION_SECRET=your-super-secret-key-change-this-in-production
+SESSION_TIMEOUT=86400000  # 24 hours in milliseconds
+
+# Admin User
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin123
+
+# CORS
+CORS_ORIGIN=*
+
+# Logging
+LOG_LEVEL=info
+
+# Rate Limiting
+RATE_LIMIT_WINDOW=900000  # 15 minutes in milliseconds
+RATE_LIMIT_MAX=100       # Maximum requests per window
+
+# WhatsApp Settings
+WHATSAPP_RECONNECT_INTERVAL=5000  # 5 seconds
+WHATSAPP_MAX_RETRIES=3
