--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
   "name": "whatsapp-bot-dashboard",
   "version": "1.0.0",
-  "description": "A WhatsApp bot management dashboard",
+  "description": "A dashboard to manage multiple WhatsApp bot instances",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.5.0",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "qrcode": "^1.5.3",
+    "session-file-store": "^1.5.0",
+    "whatsapp-web.js": "^1.23.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -39,7 +41,6 @@
     "whatsapp",
     "bot",
     "dashboard",
-    "management",
     "nodejs",
     "express"
   ],
@@ -48,5 +49,48 @@
   "bugs": {
     "url": "https://github.com/yourusername/whatsapp-bot-dashboard/issues"
   },
-  "homepage": "https://github.com/yourusername/whatsapp-bot-dashboard#readme"
+  "homepage": "https://github.com/yourusername/whatsapp-bot-dashboard#readme",
+  "nodemonConfig": {
+    "ignore": [
+      "data/*",
+      "logs/*",
+      "sessions/*"
+    ],
+    "ext": "js,json,ejs"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "**/*.js",
+      "!**/node_modules/**",
+      "!**/coverage/**",
+      "!**/test/**"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true,
+    "printWidth": 100
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true,
+      "es2021": true,
+      "jest": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "prettier"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 12
+    },
+    "rules": {
+      "no-console": "warn",
+      "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    }
+  }
 }
